--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,11 @@
 
   <dependencies>
     <dependency>
+       <groupId>org.postgresql</groupId>
+       <artifactId>postgresql</artifactId>
+       <version>42.5.4</version>
+    </dependency>
+    <dependency>
       <groupId>io.micronaut</groupId>
       <artifactId>micronaut-inject</artifactId>
       <scope>compile</scope>
@@ -98,6 +103,26 @@
       <groupId>software.amazon.awssdk</groupId>
       <artifactId>sqs</artifactId>
       <scope>compile</scope>
+    </dependency>
+    <dependency>
+      <groupId>software.amazon.awssdk</groupId>
+      <artifactId>s3</artifactId>
+      <scope>compile</scope>
+    </dependency>
+	<dependency>
+  		<groupId>com.amazonaws</groupId>
+  		<artifactId>aws-java-sdk-s3</artifactId>
+  		<version>1.11.624</version>
+  	</dependency>
+    <dependency>
+      <groupId>software.amazon.awssdk</groupId>
+      <artifactId>sns</artifactId>
+      <scope>compile</scope>
+    </dependency>
+    <dependency>
+       <groupId>software.amazon.kinesis</groupId>
+       <artifactId>amazon-kinesis-client</artifactId>
+       <version>2.2.9</version>
     </dependency>
     <!-- X-Ray Tracing Dependencies -->
     <dependency>
