--- a/pom.xml
+++ b/pom.xml
@@ -124,6 +124,11 @@
        <artifactId>amazon-kinesis-client</artifactId>
        <version>2.2.9</version>
     </dependency>
+     <dependency>
+         <groupId>software.amazon.awssdk</groupId>
+         <artifactId>sfn</artifactId>
+     </dependency>
+    
     <!-- X-Ray Tracing Dependencies -->
     <dependency>
       <groupId>com.amazonaws</groupId>
