added aurora serverless with and without rds examples

--- a/template-Aurora-Serverless-with-and-Data-API.yaml
+++ b/template-Aurora-Serverless-with-and-Data-API.yaml
@@ -604,6 +604,7 @@ Resources:
       Engine: aurora-postgresql
       DBInstanceClass: db.serverless
       DBClusterIdentifier: !Ref AuroraServerlessV2Cluster
+      #EnablePerformanceInsights: true
       
 
 
