--- a/template-Aurora-Serverless-with-and-without-Data-API.yaml
+++ b/template-Aurora-Serverless-with-and-without-Data-API.yaml
@@ -664,6 +664,7 @@ Resources:
       Engine: aurora-postgresql
       DBInstanceClass: db.serverless
       DBClusterIdentifier: !Ref AuroraServerlessV2Cluster
+      #EnablePerformanceInsights: true
       
 
 
