--- a/template-Aurora-Serverless-with-and-Data-API.yaml
+++ b/template-Aurora-Serverless-with-and-Data-API.yaml
@@ -42,7 +42,7 @@ Parameters:
           
 Globals:
   Function:
-    CodeUri: target/micronaut-lambda-function-1.0.0-SNAPSHOT.jar
+    CodeUri: target/amazon-devops-guru-workshop-source-code-1.0.0-SNAPSHOT.jar
     Handler: io.micronaut.function.aws.proxy.MicronautLambdaHandler
     Runtime: java11
     Timeout: 30 
@@ -116,6 +116,7 @@ Resources:
     Type: AWS::Serverless::Function
     Properties:
       FunctionName: GetProductById
+      Handler: software.amazonaws.example.product.handler.GetProductByIdHandler::handleRequest
       Policies:
         - DynamoDBReadPolicy:
             TableName: !Ref ProductsTable
@@ -264,6 +265,7 @@ Resources:
     Type: AWS::Serverless::Function
     Properties:
       FunctionName: PutProduct
+      Handler: software.amazonaws.example.product.handler.CreateProductHandler::handleRequest
       Environment:
          Variables:
            JAVA_TOOL_OPTIONS: "-XX:+TieredCompilation -XX:TieredStopAtLevel=1"
