--- a/template-without-kinesis-with-RDS.yaml
+++ b/template-without-kinesis-with-RDS.yaml
@@ -25,7 +25,7 @@ Parameters:
 Globals:
   Function:
     Tracing: Active
-    CodeUri: target/micronaut-lambda-function-1.0.0-SNAPSHOT.jar
+    CodeUri: target/amazon-devops-guru-workshop-source-code-1.0.0-SNAPSHOT.jar
     Handler: io.micronaut.function.aws.proxy.MicronautLambdaHandler
     Runtime: java11
     Timeout: 30 
@@ -95,6 +95,7 @@ Resources:
     Type: AWS::Serverless::Function
     Properties:
       FunctionName: GetProductById
+      Handler: software.amazonaws.example.product.handler.GetProductByIdHandler::handleRequest
       Policies:
         - DynamoDBReadPolicy:
             TableName: !Ref ProductsTable
@@ -168,6 +169,7 @@ Resources:
     Type: AWS::Serverless::Function
     Properties:
       FunctionName: PutProduct
+      Handler: software.amazonaws.example.product.handler.CreateProductHandler::handleRequest
       Environment:
          Variables:
            JAVA_TOOL_OPTIONS: "-XX:+TieredCompilation -XX:TieredStopAtLevel=1"
