--- a/template.yaml
+++ b/template.yaml
@@ -24,7 +24,7 @@ Parameters:
           
 Globals:
   Function:
-    CodeUri: target/micronaut-lambda-function-1.0.0-SNAPSHOT.jar
+    CodeUri: target/amazon-devops-guru-workshop-source-code-1.0.0-SNAPSHOT.jar
     Handler: io.micronaut.function.aws.proxy.MicronautLambdaHandler
     Runtime: java11
     Timeout: 30
@@ -94,6 +94,7 @@ Resources:
     Type: AWS::Serverless::Function
     Properties:
       FunctionName: GetProductById
+      Handler: software.amazonaws.example.product.handler.GetProductByIdHandler::handleRequest
       Policies:
         - DynamoDBReadPolicy:
             TableName: !Ref ProductsTable
@@ -167,6 +168,7 @@ Resources:
     Type: AWS::Serverless::Function
     Properties:
       FunctionName: PutProduct
+      Handler: software.amazonaws.example.product.handler.CreateProductHandler::handleRequest
       Environment:
          Variables:
            JAVA_TOOL_OPTIONS: "-XX:+TieredCompilation -XX:TieredStopAtLevel=1"
