--- a/template-Aurora-Serverless-with-and-Data-API.yaml
+++ b/template-Aurora-Serverless-with-and-Data-API.yaml
@@ -169,6 +169,7 @@ Resources:
     Type: AWS::Serverless::Function
     Properties:
       FunctionName: GetProducts
+      Handler: software.amazonaws.example.product.handler.GetAllProductsHandler::handleRequest
       Policies:
         - DynamoDBReadPolicy:
             TableName: !Ref ProductsTable
@@ -304,6 +305,7 @@ Resources:
     Type: AWS::Serverless::Function
     Properties:
       FunctionName: DeleteProduct
+      Handler: software.amazonaws.example.product.handler.DeleteProductByIdHandler::handleRequest
       MemorySize: 1024
       Policies:
         - DynamoDBCrudPolicy:
