--- a/template-Aurora-Serverless-with-and-without-Data-API.yaml
+++ b/template-Aurora-Serverless-with-and-without-Data-API.yaml
@@ -171,6 +171,7 @@ Resources:
     Type: AWS::Serverless::Function
     Properties:
       FunctionName: GetProducts
+      Handler: software.amazonaws.example.product.handler.GetAllProductsHandler::handleRequest
       Policies:
         - DynamoDBReadPolicy:
             TableName: !Ref ProductsTable
@@ -306,6 +307,7 @@ Resources:
     Type: AWS::Serverless::Function
     Properties:
       FunctionName: DeleteProduct
+      Handler: software.amazonaws.example.product.handler.DeleteProductByIdHandler::handleRequest
       MemorySize: 1024
       Policies:
         - DynamoDBCrudPolicy:
